@@ -11,6 +11,9 @@
 {block name="customernodesbox"}
 	{include file="customer/customernodesbox.html"}
 {/block}
+{block name="customernetworksbox"}
+	{include file="customer/customernetworksbox.html"}
+{/block}
 {block name="transactions"}
 	{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
 			{include file="transactions.html"}
