@@ -15,6 +15,9 @@
 {block name="customernodesbox"}
 	{include file="customer/customernodesbox.html"}
 {/block}
+{block name="customernetworksbox"}
+	{include file="customer/customernetworksbox.html"}
+{/block}
 {block name="customervoipaccountsbox"}
 	{include file="customer/customervoipaccountsbox.html"}
 {/block}
