@@ -10,6 +10,7 @@
     {block name=extra_content}{/block}
     {include file="customer/customerinfobox.html" customerpanel=1}
     {include file="customer/customernodesbox.html"}
+    {include file="customer/customernetworksbox.html"}
     {include file="customer/customervoipaccountsbox.html"}
     {include file="customer/customerdocuments.html" limit=10}
     {include file="customer/customermessages.html" limit=10}
