@@ -42,6 +42,7 @@ version ?.??.?? (????-??-??):
     if node names are automatically capitalized during node add or update [chilan]
   - allow plugins to add their own buttons in customer balance box and invoice list [chilan]
   - allow plugins to add their own content in left and right column of customer info and edit boxes [chilan]
+  - allow assign a whole network to the customer [pjona]
 
 version 1.11.18 (2015-10-01):
 
